tests/repositories/snapshots/meson/tests/meson_template.c.snap
---
source: tests/common/mod.rs
expression: content
---
#include "meson_template.h"

int main()
{
    return 0;
}

