tests/repositories/snapshots/meson/tests/tmp_template.c.snap
---
source: tests/common/mod.rs
expression: content
---
#include "tmp_template.h"

int main()
{
    return 0;
}

